// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ArticleList > スナップショットテスト（レイアウト破壊的変更の検出） > お気に入りのみの記事レイアウト > article-layout-favorite-only 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│ Sample Article Title                                                                             │
│ 公開日: 2024年1月15日 10:30 | 著者: John Doe                                                     │
│ URL: https://example.com/article1                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ ? でヘルプ表示                                                                             1/1件 │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ArticleList > スナップショットテスト（レイアウト破壊的変更の検出） > お気に入り＋ピン両方の記事レイアウト > article-layout-favorite-and-pin 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│ Sample Article Title                                                                             │
│ 公開日: 2024年1月15日 10:30 | 著者: Bob Wilson | 📌 ピン                                         │
│ URL: https://example.com/article1                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ ? でヘルプ表示                                                                             1/1件 │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ArticleList > スナップショットテスト（レイアウト破壊的変更の検出） > ピンのみの記事レイアウト > article-layout-pin-only 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│ Sample Article Title                                                                             │
│ 公開日: 2024年1月15日 10:30 | 著者: Jane Smith | 📌 ピン                                         │
│ URL: https://example.com/article1                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ ? でヘルプ表示                                                                             1/1件 │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ArticleList > スナップショットテスト（レイアウト破壊的変更の検出） > 未読記事なしの状態 > article-layout-no-articles 1`] = `
"
                                        未読記事がありません
                                ヒント: \`r\` でフィードを更新できます

                                           ? でヘルプ表示
"
`;

exports[`ArticleList > スナップショットテスト（レイアウト破壊的変更の検出） > 著者なし＋お気に入りの記事レイアウト > article-layout-no-author-favorite 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│ Sample Article Title                                                                             │
│ 公開日: 2024年1月15日 10:30                                                                      │
│ URL: https://example.com/article1                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ ? でヘルプ表示                                                                             1/1件 │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ArticleList > スナップショットテスト（レイアウト破壊的変更の検出） > 記事未選択の状態 > article-layout-no-selection 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│                                      記事を選択してください                                      │
│                                                                                                  │
│                                                                                                  │
│ ? でヘルプ表示                                                                           未読2件 │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;

exports[`ArticleList > スナップショットテスト（レイアウト破壊的変更の検出） > 通常の記事レイアウト（お気に入り・ピンなし） > article-layout-normal 1`] = `
"┌──────────────────────────────────────────────────────────────────────────────────────────────────┐
│                                                                                                  │
│ Sample Article Title                                                                             │
│ 公開日: 2024年1月15日 10:30 | 著者: Alice Johnson                                                │
│ URL: https://example.com/article1                                                                │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│                                                                                                  │
│ ? でヘルプ表示                                                                             1/1件 │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘"
`;
